--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.965.0",
+    "@aws-sdk/client-sns": "^3.965.0",
+    "@aws-sdk/s3-request-presigner": "^3.965.0",
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.2",
     "body-parser": "^1.20.2",
