--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.2",
-    "body-parser": "^1.20.2",
+    "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "moment": "^2.30.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
